# deadfs

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  base64.h  config.h  deadfs.c  deadfs.h  err.h  file.h  fuse.c  fuse.h  intl.c  intl.h  main.c  nenc.h  path.c  path.h
src/fs/: CMakeLists.txt
src/fs/blockfs/: CMakeLists.txt  blockfs.c  blockfs.h  file.c  node.c  super.c
src/fuse/: fuse.c  fuse.h
src/nencs/: base32.c  nencs.h
src/ops/: create.c  getattr.c  mkdir.c  open.c  ops.h  read.c  readdir.c  release.c  rename.c  rmdir.c  truncate.c  unlink.c  write.c
src/utils/: file.c  file.h  log.c  log.h
