cmake_minimum_required(VERSION 2.8)

PROJECT("deadfs" C)
SET(PROJECT_VERSION "0.0.1")

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")

SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wall -D_FILE_OFFSET_BITS=64")
SET(CMAKE_C_FLAGS_DEBUG  "${CMAKE_C_FLAGS_DEBUG}")
SET(CMAKE_C_FLAGS_RELEASE  "${CMAKE_C_FLAGS_RELEASE}")

if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "RELEASE")
endif()

include_directories("ext/uthash/include")

add_subdirectory(src)
